Fixing spacing in side panel

--- a/src/css/sidePanel.css
+++ b/src/css/sidePanel.css
@@ -31,3 +31,8 @@
 	width: 100%;
 	z-index: 9;
 }
+
+#sidePanelForm,
+.groupHelp {
+	margin-bottom: 30px;
+}
